P should not be allowed to contain TABLE in standards mode.  Patch by Mats Palmgren <mats.palmgren@bredband.net>.  r=harishd  sr=dbaron  b=91927